# prelewd

./: .gitignore  GA.v  README.md  alias.h  apply.h  c.md  cpp.h  example.c  ext.h  fold.h  foldl.h  foldl.out.h  foldl1.out.h  foldr.h  foldr.out.h  foldr1.out.h  ga.c  ga.h  ga_fp.h  ga_fp_decl.h  gcc-5_4_0-release  gcc-version  gen.c  get.h  index.h  magic.h  makefile  maskbits.h  maskbits.out.h  notes.md  pow.h  pow.out.h  prelewd.dot  prelewd.h  scalar.c  scalar.h  scalar_fp.c  scalar_fp.h  scalar_int.c  scalar_int.h  (+20 more)
prelewd/: README.md  alias.h  cpp.h  lift.c  lift.h  lift_eq.h  lift_eq.out.h  lift_ord.h  lift_ord.out.h  lift_poly.h  lift_poly.out.h  lift_std.h  list.c  list.h  list_any.h  list_any_decl.h  list_one.h  ord.h  ord_any.h  ord_poly.c  ord_poly.h  prelewd.cabal  std.c  std.h  std_any.h  std_any_decl.h  std_eq.h  std_eq_decl.h  std_ord.h  std_ord_decl.h  std_pmon.h  std_pmon_decl.h  std_poly.h  std_poly_decl.h  std_smon.h  std_smon_decl.h  std_std_decl.h
prelewd/cpp/: apply.h  assert.h  debug.h  decl.h  fold.h  get.h  get.out.h  gnu.h  type.h
prelewd/cpp/type/: apply.h  eval.h  foldl.out.h  foldr.out.h  get.out.h  index.h  length.h  seq.h  seql.out.h  seqr.out.h  spec.h  type.h
prelewd/src/: Prelewd.hs
prelewd/src/Prelewd/: Combinators.hs  GroupLike.hs  LatticeLike.hs  ModuleLike.hs  RingLike.hs  SpaceLike.hs  Types.hs
