name:                prelewd
version:             0.0.0
synopsis:            A solipsistic prelude.
description:         The goal of this project is to explore abstract algebra.
homepage:            https://github.com/Tuplanolla/prelewd
license:             GPL-3
license-file:        LICENSE
author:              Sampsa Kiiskinen
maintainer:          tuplanolla@gmail.com
copyright:           Copyright (C) 2017 Sampsa "Tuplanolla" Kiiskinen
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Prelewd, Prelewd.Combinators,
                       Prelewd.GroupLike, Prelewd.LatticeLike,
                       Prelewd.ModuleLike, Prelewd.RingLike,
                       Prelewd.Types
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
